--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,73 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.inicio-background {
+  background-image: url('/public/img/ini2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-bottom: 50px;
+}
+
+
+.background-image {
+  background-image: url('/public/img/art.avif');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 14px;
+}
+
+.custom-margin-bottom {
+  margin-bottom: 50px;
+}
+
+.nav-link {
+  text-decoration: none;
   color: white;
+  transition: color 0.3s ease, background-color 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-link:hover {
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown-item:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.btn-outline-dark:hover {
+  color: black; /* Cambia el color del texto al pasar el mouse */
+  background-color: whitesmoke; /* Cambia el color de fondo al pasar el mouse */
+  border-color: transparent; /* Cambia el color del borde al pasar el mouse */
+}
+
+.card.border-0 {
+  border: 0;
+}
+
+
+.carousel-img-fixed {
+  width: 200px;
+  height: 470px;
+  object-fit: cover;
+}
+
+.card-img-fixed {
+  width: auto;
+  height:280px;
+  object-fit: cover;
+}
+
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: scale(1.05);
 }
